test_suite/tests/ui/identifier/newtype_not_last.stderr
error: `Other` must be the last variant
  --> $DIR/newtype_not_last.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

